<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.thomasprycejones.bethebestpogo.Fragment.AdsFragment"
    android:id="@+id/ads_mainBackground"
    android:background="#a75151">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/adView2"
        android:layout_above="@+id/adView"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ads_permission"
            android:id="@+id/ads_explanation"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ads_pedirInterstial"
            android:id="@+id/textView"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:layout_marginTop="50dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ads_interstial"
            android:id="@+id/ads_buttoninterstitial" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ads_pedirBanner"
            android:id="@+id/textView2"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:layout_marginTop="50dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ads_banner"
            android:id="@+id/ads_buttonbanner" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_home_footer"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true">
    </com.google.android.gms.ads.AdView>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_home_footer"
        android:visibility="visible"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>
