<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainBackground"
    android:background="@color/MysticBG">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Button"
            android:id="@+id/introAgain"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <Button
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:id="@+id/startService"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="81dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textColor="#ffffff"
                android:textAlignment="center"
                android:backgroundTint="#38c21d"
                android:textSize="20sp"
                android:text="@string/home_startactivity" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_updateapk"
                android:id="@+id/home_updateapk"
                android:layout_below="@+id/startService"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:visibility="gone" />
        </RelativeLayout>

    </LinearLayout>


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/frameLayout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/legendaryBird"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:src ="@drawable/zapdos"/>
    </FrameLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_home_footer"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true">
    </com.google.android.gms.ads.AdView>




</RelativeLayout>