<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="#5f7c7c7c"
    android:id="@+id/layoutback_Test">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/relativeLayout"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/frameLayout2">

        <WebView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/webView_pokemap"
            android:visibility="visible"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />

        <WebView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/webView_silphroad"
            android:visibility="gone"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="false" />

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/frameLayout2">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/webView_refresh"
                android:src="@android:drawable/stat_notify_sync"
                android:backgroundTint="#4caf50"
                android:elevation="4dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/webservice_map"
                android:id="@+id/webButton_fastpokemap"
                android:textColor="#ffffff"
                android:backgroundTint="#303f9f" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/webservice_iv"
                android:id="@+id/webButton_silphroad"
                android:textColor="#ffffff"
                android:backgroundTint="#303f9f"
                android:layout_gravity="center" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/webservice_close"
                android:id="@+id/webButton_close"
                android:textColor="#ffffff"
                android:backgroundTint="#b71c1c"
                android:layout_gravity="right|center_vertical" />

        </LinearLayout>

    </FrameLayout>

</RelativeLayout>