<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/InstinctBG"
            android:gravity="center">

            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/zapdos" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/MysticBG"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/img_width_height"
                android:layout_height="@dimen/img_width_height"
                android:src="@drawable/articuno" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/ValorBG"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/img_width_height"
                android:layout_height="@dimen/img_width_height"
                android:src="@drawable/moltres" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/select_team"
                android:id="@+id/textView6"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="40sp"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:baselineAligned="false">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_instinct"
                    android:background="@color/Instinct"
                    android:textStyle="bold"
                    android:textColor="@color/InstinctBG"
                    android:id="@+id/btn_instinct"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_mystic"
                    android:id="@+id/btn_mystic"
                    android:background="@color/Mystic"
                    android:textStyle="bold"
                    android:textColor="@color/MysticBG"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_valor"
                    android:id="@+id/btn_valor"
                    android:background="@color/Valor"
                    android:textStyle="bold"
                    android:textColor="@color/ValorBG"
                    android:textAlignment="center" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>